--- a/CMDPattern_Lamp_2/.project
+++ b/CMDPattern_Lamp_2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CMDPattern_Lamp_8_2</name>
+	<name>CMDPattern_Lamp_2</name>
 	<comment></comment>
 	<projects>
 	</projects>
