--- a/OBSPattern_Score_1/.project
+++ b/OBSPattern_Score_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CMDPattern_Lamp_8_1</name>
+	<name>OBSPattern_Score_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
