--- a/FactoryMethodPattern_Pizza/.gitignore
+++ b/FactoryMethodPattern_Pizza/.gitignore
@@ -1,1 +1,7 @@
 /PizzaStore.class
+/Factory.class
+/SimplePizzaFactory.class
+/CheesePizza.class
+/Pizza.class
+/PepperoniPizza.class
+/PizzaTest.class
