--- a/@FactoryMethodPattern_Pizza/.project
+++ b/@FactoryMethodPattern_Pizza/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TempleteMethodPattern_Coffee2</name>
+	<name>@FactoryMethodPattern_Pizza</name>
 	<comment></comment>
 	<projects>
 	</projects>
