--- a/@DecoratorPattern_Beverage/.project
+++ b/@DecoratorPattern_Beverage/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TempleteMethodPattern_Coffee2</name>
+	<name>@DecoratorPattern_Beverage</name>
 	<comment></comment>
 	<projects>
 	</projects>
